# pywindsorai

./: .gitignore  README.md  setup.cfg  setup.py
.github/workflows/: auto-release-to-github.yml  publish-to-pypi.yml  test_pacakge.yml  test_package.yml
pywindsorai/: client.py  enums.py
tests/: tests.py
