[metadata]
name = pywindsorai
version = file: VERSION
author = Windsor AI
author_email = dev@windsor.ai
url = https://github.com/windsor-ai/pywindsorai
description = Easy access to windsor.ai APIs
long_description = file: README.md
long_description_content_type = text/markdown

[options]
install_requires =
    requests
    python-dotenv
zip_safe = false
packages = find:
test_suite=tests
